deployment/api.deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    name: api
spec:
    replicas: 2
    template:
        metadata:
            labels:
                app: api
        spec:
            containers:
              - name: api
                image: dapoliit.azurecr.io/api:latest
                ports:
                    - containerPort: 80
            imagePullSecrets:
                - name: azure-ad-secret
