deployment/identity-server.deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    name: identity-server
spec:
    replicas: 1
    template:
        metadata:
            labels:
                app: identity-server
        spec:
            containers:
              - name: identity-server
                image: dapoliit.azurecr.io/identity-server:latest
            imagePullSecrets:
                - name: azure-ad-secret
