deployment/notification-service.delpoy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    name: notification-service
spec:
    replicas: 1
    template:
        metadata:
            labels:
                app: notification-service
        spec:
            containers:
              - name: notification-service
                image: dapoliit.azurecr.io/notification-service:latest
            imagePullSecrets:
                - name: azure-ad-secret
