deployment/api.service.yaml
apiVersion: v1
kind: Service
metadata:
    name: api
spec:
    type: LoadBalancer
    ports:
      - port: 80
        targetPort: 9376
    selector:
        app: front
