deployment/front.service.yaml
apiVersion: v1
kind: Service
metadata:
    name: front
spec:
    selector:
        app: front
    ports:
      - port: 80
        targetPort: 4200
    type: LoadBalancer
